Bug 1261674 - Handle wheel event when mouse cursor is hovered on a focused range input as increasing/decreasing it's value. r=smaug